more styling, image grid setup

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -44,21 +44,25 @@ languages:
       words: "words"
 
       logo:
-        logoText: "Animation"
+        logoPath: "branding/cib-abstract.svg"
+        logoText: "owen keefer"
         logoSubtitle: "Selected studies and experiments in motion"
         logoHomeLink: "/folio"
 
     menu:
       main:
-        - identifier: "paintings"
-          name: "Paintings"
-          url: "/sections/paintings"
-        - identifier: "graphics"
-          name: "Graphic Design"
-          url: "/sections/graphics"
+        - identifier: "about"
+          name: "About"
+          url: "/about"
         - identifier: "animation"
           name: "Animation"
-          url: "/sections/animation"
+          url: "/animation"
         - identifier: "digital"
-          name: "Digital Work"
-          url: "/sections/digital"
+          name: "Digital Works"
+          url: "/digital"
+        - identifier: "graphics"
+          name: "Graphic Design"
+          url: "/graphics"
+        - identifier: "painting"
+          name: "Paintings"
+          url: "/painting"
