--- a/data/meta.yaml
+++ b/data/meta.yaml
@@ -4,21 +4,24 @@ animation:
       title: "Loop Study 01"
       caption: "30s loop — 3D spline extrusion, crisp lighting"
       order: 1
+      pagepath: "../animations/loopstudy"
+    - file: "anim_02-01.png"
+      title: "Stop-Motion Forms"
+      order: 2
+      pagepath: "../animations/stopmotion"
+      caption: "clay morphing sequence with tactile textures"
     - file: "aa03.png"
       title: "Hand-Drawn Cycles"
       order: 3
       caption: "12FPS Pencil-on-paper cycle, scanned and composited"
-    - file: "anim_02-01.png"
-      title: "Stop-Motion Forms"
-      order: 2
-      caption: "clay morphing sequence with tactile textures"
 
 digital: 
   images:
     - file: "digit_01-01.png"
-      title: "Geometric MoGraph"
+      title: "Houses"
       order: 1
       caption: "procedural motion graphics with hard cuts"
+      pagepath: "../digitalworks/houses"
     - file: "digit_02-01.png"
       title: "Glitch Experiments"
       order: 3
